# fx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fx/: USAGE.md  __init__.py  __main__.py  commands.py  context.py  plugin_sync.py  runtime_ops.py  state.py  structure.py  support.py  templates.py
src/fx/command_sets/: __init__.py  cron.py  modules.py  package.py  plugin.py  project.py  run.py
src/fx/plugins/: __init__.py  core.py  cron.py  diagnostics.py  runtime.py
tests/: conftest.py
tests/fx/: test_fx_commands.py
